# nat-proofs

./: CHANGELOG.md  README.md  nat-proofs.cabal
src/: NatProofs.hs
