cabal-version: 2.4
name:
  nat-proofs
version:
  0.1
synopsis:
  See README for more info
description:
  See README for more info
homepage:
  https://github.com/chessai/nat-proofs
bug-reports:
  https://github.com/chessai/nat-proofs/issues
license:
  BSD-3-Clause
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai <chessai1996@gmail.com>
copyright:
  © 2019 chessai
category:
  Game
build-type:
  Simple
extra-doc-files:
    README.md
  , CHANGELOG.md
tested-with:
  GHC == 8.6.3

library
  hs-source-dirs:
    src
  exposed-modules:
    NatProofs
  build-depends:
    , base ^>= 4.12.0.0
  ghc-options:
    -Wall
    -O2
  default-language:
    Haskell2010

source-repository head
  type:
    git
  location:
    https://github.com/chessai/nat-proofs.git
